# xfce4-window-title-plugin

./: README.md  TODO.md  meson.build  window-title.desktop.in
po/: POTFILES.in  es.po
src/: window-title.c  window-title.h
